Updating upstart recipe

--- a/init/contests-submissions_fetcher.conf
+++ b/init/contests-submissions_fetcher.conf
@@ -1,3 +1,5 @@
+# This file must be copied to from /etc/init
+# You can't just symlink it because Upstart doesn't support symbolic links.
 description "Continuously fetches submissions from the Online Judge set up for the 'contests' application at /home/rails/contests."
 
 start on runlevel [2]
@@ -5,4 +7,4 @@ stop on runlevel [016]
 
 respawn
 
-exec su - rails -c 'cd /home/rails/contests/current; bundle exec rake RAILS_ENV=production submissions:fetch:daemon >> /home/rails/contests/current/log 2>&1'
+exec su - rails -c 'cd /home/rails/contests/current; bundle exec rake RAILS_ENV=production submissions:fetch:daemon >> /home/rails/contests/current/log/submissions_fetcher.log 2>&1'
