Updating upstart recipe

--- a/init/contests-submissions_fetcher.conf
+++ b/init/contests-submissions_fetcher.conf
@@ -7,4 +7,4 @@ stop on runlevel [016]
 
 respawn
 
-exec su - rails -c 'cd /home/rails/contests/current; bundle exec rake RAILS_ENV=production submissions:fetch:daemon >> /home/rails/contests/current/log/submissions_fetcher.log 2>&1'
+exec su - rails -c 'cd /home/rails/contests/current; rvm_path=/home/rails/.rvm/ /home/rails/.rvm/bin/rvm-shell "1.9.2-p290" -c "bundle exec rake RAILS_ENV=production submissions:fetch:daemon > /dev/null 2>> /home/rails/contests/current/log/submissions_fetcher.log"'
